--- a/controle-financas/src/main/resources/application.properties
+++ b/controle-financas/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/cursosql
+spring.datasource.url=jdbc:mysql://localhost:3306/cursosql
 spring.datasource.username=leo
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
